# mpi

./: CMakeLists.txt
heterogeneous/: CMakeLists.txt
mpi/: CMakeLists.txt  hello.c  matmul.cpp  pi.c
mpi_openmp/: CMakeLists.txt  matmul.cpp
openmp/: CMakeLists.txt  cv_keypoint.cpp  main.c
